--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -117,7 +117,71 @@
    "id": "53fbe2f2-9b45-452e-9b3a-b668d52c723b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Re-run file generation after kernel reset\n",
+    "recommend_route = \"\"\"\n",
+    "from flask import Flask, request, jsonify\n",
+    "from flask_cors import CORS\n",
+    "import os\n",
+    "import json\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "CORS(app)\n",
+    "\n",
+    "# Dummy function to simulate learner history retrieval\n",
+    "def load_logs(user_id):\n",
+    "    # For this demo, we use a simple local JSON file or placeholder\n",
+    "    logs_path = f\"./logs/{user_id}.json\"\n",
+    "    if not os.path.exists(logs_path):\n",
+    "        return []\n",
+    "    with open(logs_path, \"r\") as f:\n",
+    "        return json.load(f)\n",
+    "\n",
+    "# Dummy logic for recommendation\n",
+    "def recommend_next(logs):\n",
+    "    if not logs:\n",
+    "        return None\n",
+    "\n",
+    "    last_topic = logs[-1].get(\"topic\", \"Introduction to AI\")\n",
+    "    topic_map = {\n",
+    "        \"Photosynthesis\": (\"Cellular Respiration\", \"intermediate\"),\n",
+    "        \"Machine Learning\": (\"Neural Networks\", \"intermediate\"),\n",
+    "        \"Neural Networks\": (\"Deep Learning\", \"advanced\"),\n",
+    "        \"Introduction to AI\": (\"Machine Learning\", \"beginner\"),\n",
+    "    }\n",
+    "    return topic_map.get(last_topic, (\"General Review\", \"beginner\"))\n",
+    "\n",
+    "@app.route(\"/recommend\", methods=[\"POST\"])\n",
+    "def recommend():\n",
+    "    try:\n",
+    "        data = request.get_json()\n",
+    "        user_id = data.get(\"user_id\")\n",
+    "\n",
+    "        if not user_id:\n",
+    "            return jsonify({\"error\": \"Missing user_id\"}), 400\n",
+    "\n",
+    "        logs = load_logs(user_id)\n",
+    "\n",
+    "        if not logs:\n",
+    "            return jsonify({\"message\": \"No logs found\", \"topic\": \"Introduction to AI\", \"level\": \"beginner\"}), 200\n",
+    "\n",
+    "        topic, level = recommend_next(logs)\n",
+    "        return jsonify({\"topic\": topic, \"level\": level})\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return jsonify({\"error\": str(e)}), 500\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def health():\n",
+    "    return \"Personalisation Engine is running\", 200\n",
+    "\"\"\"\n",
+    "\n",
+    "recommend_path = \"/mnt/data/recommend_handler.py\"\n",
+    "with open(recommend_path, \"w\") as f:\n",
+    "    f.write(recommend_route.strip())\n",
+    "\n",
+    "recommend_path\n"
+   ]
   }
  ],
  "metadata": {
